--- a/Circle Avatars Version/friends.custom.css
+++ b/Circle Avatars Version/friends.custom.css
@@ -1,1 +1,1 @@
-@import url('https://the-hopelessgamer.github.io/Custom-Metro-UI-For-Steam/Circle Avatars Version/friends.cusotm.dev.css');
+@import url('https://the-hopelessgamer.github.io/Custom-Metro-UI-For-Steam/Circle Avatars Version/friends.custom.dev.css');
