--- a/Circle-Avatars-Version/friends.custom.dev.css
+++ b/Circle-Avatars-Version/friends.custom.dev.css
@@ -621,8 +621,10 @@ margin-top: 0px !important;
     text-align: center;
     overflow: hidden;
     color: #91c257;
-    margin-top: -40px !important;
-    margin-left: -45px !important;
+	margin-top: 0px !important;
+    margin-left: 0px !important;
+	margin-right: 0px !important;
+	margin-bottom: 0px !important;
 }
 
 .friend.firstInGroup .SteamPlayerGroupLines, .friend.inGroup .SteamPlayerGroupLines, .friend.lastInGroup .SteamPlayerGroupLines, .SteamPlayerGroupFooter .SteamPlayerGroupLines {
