--- a/Circle-Avatars-Version/friends.custom.dev.css
+++ b/Circle-Avatars-Version/friends.custom.dev.css
@@ -1299,3 +1299,19 @@ button.DialogButton.copyVoiceLogsButton {
     border-style: solid !important;
     border-color: #1e1e1f !important;
 }
+
+.FavoriteFriend_GameIcon {
+    border-radius: 10px !important;
+    bottom: 0px !important;
+    right: 30px !important;
+    width: 20px !important;
+    height: 20px !important;
+}
+
+.compactQuickAccess .FavoriteFriend_GameIcon {
+    border-radius: 10px !important;
+    bottom: 1px !important;
+    right: 20px !important;
+    width: 17px !important;
+    height: 17px !important;
+}
