--- a/Circle-Avatars-Version/friends.custom.dev.css
+++ b/Circle-Avatars-Version/friends.custom.dev.css
@@ -1315,3 +1315,7 @@ button.DialogButton.copyVoiceLogsButton {
     width: 17px !important;
     height: 17px !important;
 }
+
+.contextmenu_contextMenu_3_a2Z {
+	background: #1a1a1a!important;
+}
