--- a/friends.custom.dev.css
+++ b/friends.custom.dev.css
@@ -1121,3 +1121,7 @@ button.DialogButton.copyVoiceLogsButton {
   stroke: #dceef6;
   animation-duration: 1s;
 }
+
+.contextmenu_contextMenu_3_a2Z {
+	background: #1a1a1a!important;
+}
