--- a/Circle-Avatars-Version/friends.custom.dev.css
+++ b/Circle-Avatars-Version/friends.custom.dev.css
@@ -1323,3 +1323,27 @@ button.DialogButton.copyVoiceLogsButton {
 .contextmenu_contextMenuItem_CBC-y:hover, .contextmenu_contextMenuItem_CBC-y.contextmenu_active_3vYUp {
   background: #333333!important;
 }
+
+.unreadMessageViolator {
+    /* position: absolute; */
+    left: 6px;
+    right: 6px;
+    color: #295;
+    background: #151515;
+    font-size: 14px;
+    /* line-height: 30px; */
+    text-align: center;
+    border-radius: 40px;
+    width: calc(100% - 12px);
+    z-index: 1;
+    margin: 0 auto;
+    height: 20px;
+    width: 150px;
+    margin-top: 5px;
+    /* border-bottom-right-radius: 4px; */
+    /* border-bottom-left-radius: 4px; */
+    /* border-top-width: 0; */
+    /* border: 0.5px solid rgba(250, 250, 250, 0.1); */
+    /* box-shadow: 0 4px 12px #00000088; */
+    cursor: pointer;
+}
