--- a/friends.custom.dev.css
+++ b/friends.custom.dev.css
@@ -468,10 +468,12 @@ html.client_chat_frame body, html.web_chat_frame body {
 }
 
 .friendListHeaderContainer {
-	background-color: #151515 !important;
-	border-bottom: 1px !important;
-	border-bottom-color: #000 !important;
-	padding-top: 15px;
+    background-color: #151515 !important;
+    border-bottom: 0px !important;
+}
+
+.compactView .ExpandPlusMinus {
+	opacity: 0;
 }
 
 .statusHeaderGlow {
@@ -1116,12 +1118,6 @@ button.DialogButton.copyVoiceLogsButton {
 .FriendPicker_SuggestedFriend {
 	cursor: pointer;
 	border-radius: 4px !important;
-}
-
-.friendListHeaderContainer .title-area {
-	border-bottom-color: #262626 !important;
-	border-bottom: 1px;
-	border-bottom-style: solid !important;
 }
 
 .emptyChatDialogs {
