--- a/Circle-Avatars-Version/friends.custom.dev.css
+++ b/Circle-Avatars-Version/friends.custom.dev.css
@@ -1597,3 +1597,8 @@ button.DialogButton.copyVoiceLogsButton {
 .currentUserAvatar {
 	border-radius: 50px !important;
 }
+
+.DNDCheckBox .DialogToggle_Label {
+	margin-top: -10px!important;
+}
+
