--- a/friends.custom.dev.css
+++ b/friends.custom.dev.css
@@ -1181,3 +1181,7 @@ button.DialogButton.copyVoiceLogsButton {
 .contextmenu_contextMenuItem_CBC-y:hover, .contextmenu_contextMenuItem_CBC-y.contextmenu_active_3vYUp {
 	background: #333333 !important;
 }
+
+.DNDCheckBox .DialogToggle_Label {
+	margin-top: -10px!important;
+}
