--- a/friends.custom.dev.css
+++ b/friends.custom.dev.css
@@ -17,16 +17,16 @@ html.web_chat_frame body {
 }
 
 .singleWindowFocusBar {
-    display: none!important;
+    display: none !important;
 }
 
 .chatentry_chatTextarea_3e__5 {
-    margin-right: 0px!important;
+    margin-right: 0px !important;
     background-color: #151515 !important;
 }
 
 .chatentry_chatSubmitButton_3VRfL {
-    max-height: 48px!important;
+    max-height: 48px !important;
     background-color: #151515 !important;
     transition-duration: .3s;
 }
@@ -60,7 +60,7 @@ html.web_chat_frame body {
 }
 
 .currentUserContainer .labelHolder {
-    margin-bottom: 5px!important;
+    margin-bottom: 5px !important;
 }
 
 .friendSettingsButton:hover .SVGIcon_Settings {
@@ -75,14 +75,15 @@ html.web_chat_frame body {
 .friendlistListContainer,
 .ChatRoomList,
 .chatWindow {
-    border: none!important;
+    border: none !important;
     background: #151515 !important;
 }
 
 .statusHeaderGlow,
 .insetshadow_FriendsListInsetShadowCtn_1S167,
-.miniprofile_miniProfileBackgroundBlur_G000o {
-    display: none!important;
+.miniprofile_miniProfileBackgroundBlur_G000o,
+.title-area-highlight {
+    display: none !important;
 }
 
 .friendsListSectionTitle,
@@ -93,10 +94,14 @@ html.web_chat_frame body {
 .chatWindow .chatEntry,
 .singleWindowDivider,
 .miniprofile_miniProfileContent_25Sge .miniprofile_miniProfileHeader_3oBIW,
-.chatRoomTextChannel {
-   background-color: #1a1a1a !important;
-   background: #1a1a1a !important;
+.chatRoomTextChannel,
+.chatTab .chatTabHighlight,
+.title-area-highlight {
+    background-color: #1a1a1a !important;
+    background: #1a1a1a !important;
+    mix-blend-mode: unset;
 }
+
 .VoiceToggle {
     background-color: #262626 !important;
 }
@@ -104,255 +109,258 @@ html.web_chat_frame body {
 .friendGroup .groupName,
 .friendGroup.taggedGroup,
 .friendGroup.gameGroup {
-    margin: 0px!important;
-    border-top: none!important;
+    margin: 0px !important;
+    border-top: none !important;
 }
 
 .contextmenu_contextMenuItem_CBC-y:hover,
 .contextmenu_contextMenuItem_CBC-y.contextmenu_active_3vYUp {
     background: #1a1a1a;
     color: #b8c5c9;
-  }
+}
 
-  /* Side Panel Background */
+/* Side Panel Background */
 .PagedSettingsDialog_PageListColumn {
-	background: #151515 !important;
-	flex: 1;
-	min-width: 140px;
-	max-width: 220px;
-	padding-left: 24px;
-	padding-top: 40px;
-	display: flex;
-	flex-direction: column;
-	position: relative;
+    background: #151515 !important;
+    flex: 1;
+    min-width: 140px;
+    max-width: 220px;
+    padding-left: 24px;
+    padding-top: 40px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
 }
 
 /* Background */
-.DialogContent, .DialogContentTransition {
-	background: #1e1e1f !important;
-	user-select: none;
+.DialogContent,
+.DialogContentTransition {
+    background: #1e1e1f !important;
+    user-select: none;
 }
 
 /* Shadows */
 .ModalDialogPopup .DialogContentTransition .DialogBody {
-	overflow-y: scroll;
-	-webkit-mask: none !important;
-	mask: none !important;
+    overflow-y: scroll;
+    -webkit-mask: none !important;
+    mask: none !important;
 }
 
 /* Menus color */
 ._DialogInputContainer {
-	background: #151515 !important;
-	color: #dfe3e6 !important;
-	font-size: 14px;
-	font-family: "Motiva Sans Light", Arial, Helvetica, sans-serif;
-	margin: 0;
-	padding: 1;
-	border: none !important;
-	border-radius: 4px !important;
-	box-shadow: none !important;
-	transition: all .2s ease-in-out;
+    background: #151515 !important;
+    color: #dfe3e6 !important;
+    font-size: 14px;
+    font-family: "Motiva Sans Light", Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 1;
+    border: none !important;
+    border-radius: 4px !important;
+    box-shadow: none !important;
+    transition: all .2s ease-in-out;
 }
 
 /* Shadow in Buttons */
 button.DialogButton.Secondary.Off {
-	box-shadow: none !important;
-	border-radius: 4px !important;
+    box-shadow: none !important;
+    border-radius: 4px !important;
 }
 
 /* Selected Button */
 button.DialogButton.Primary {
-	background: linear-gradient(to right, #47bfff 0%, #1a44c2 60%);
-	background-position: 25%;
-	background-size: 330% 100%;
-	border-radius: 4px !important;
+    background: linear-gradient(to right, #47bfff 0%, #1a44c2 60%);
+    background-position: 25%;
+    background-size: 330% 100%;
+    border-radius: 4px !important;
 }
 
 /* Friend Settings Notifications Row */
 .FriendsSettingsNotificationRow {
-	padding: 8px 12px;
-	margin-bottom: 10px;
-	background-color: #151515 !important;
-	color: #dfe3e6;
-	font-size: 14px;
-	font-family: "Motiva Sans Light", Arial, Helvetica, sans-serif;
-	user-select: none;
-	border-radius: 4px !important;
+    padding: 8px 12px;
+    margin-bottom: 10px;
+    background-color: #151515 !important;
+    color: #dfe3e6;
+    font-size: 14px;
+    font-family: "Motiva Sans Light", Arial, Helvetica, sans-serif;
+    user-select: none;
+    border-radius: 4px !important;
 }
 
 /* notification Check Boxes */
 .DialogCheckbox {
-	width: 22px;
-	height: 22px;
-	background-color: #0004;
-	padding: 0;
-	box-shadow: none !important;
-	cursor: pointer;
-	border-radius: 4px !important;
+    width: 22px;
+    height: 22px;
+    background-color: #0004;
+    padding: 0;
+    box-shadow: none !important;
+    cursor: pointer;
+    border-radius: 4px !important;
 }
 
 /* changes background color for buttons */
 .FriendsSettingsFlashSection_ButtonRow {
-	padding: 8px 8px;
-	background-color: #151515 !important;
-	border-radius: 4px !important;
+    padding: 8px 8px;
+    background-color: #151515 !important;
+    border-radius: 4px !important;
 }
 
 /* Adds a Background for buttons */
 .FriendsSettingsChatFontSizeSection_ButtonRow {
-	margin-top: -6px;
-	background-color: #151515 !important;
-	padding: 8px 8px !important;
-	border-radius: 4px !important;
+    margin-top: -6px;
+    background-color: #151515 !important;
+    padding: 8px 8px !important;
+    border-radius: 4px !important;
 }
 
 /* removes overlapping background on voice */
 .voiceMicTestContainer {
-	padding: 8px 8px;
-	background-color: #1e1e1f !important;
-	border-radius: 4px !important;
+    padding: 8px 8px;
+    background-color: #1e1e1f !important;
+    border-radius: 4px !important;
 }
 
 /* background voice avatar */
 .voiceSelfDirections {
-	display: flex;
-	flex-direction: row;
-	background-color: #151515 !important;
-	padding: 16px;
-	border-radius: 4px !important;
+    display: flex;
+    flex-direction: row;
+    background-color: #151515 !important;
+    padding: 16px;
+    border-radius: 4px !important;
 }
 
 /* Slider Background */
 .DialogSlider_Slider {
-	border: 0px !important;
-	border-radius: 10px;
-	position: relative;
-	height: 10px;
-	background: #202226;
-	cursor: pointer;
-	box-shadow: none !important;
-	user-select: none;
+    border: 0px !important;
+    border-radius: 10px;
+    position: relative;
+    height: 10px;
+    background: #202226;
+    cursor: pointer;
+    box-shadow: none !important;
+    user-select: none;
 }
 
 /* Removes Voice Transmission Type background */
 .FriendsSettingsVoiceTransmissionType_ButtonRow {
-	padding: 8px 8px;
-	background-color: #1e1e1f !important;
+    padding: 8px 8px;
+    background-color: #1e1e1f !important;
 }
 
 /* Changes postition background mute toggle hotkey */
 ._DialogSection.pushToTalkSection .pushToKeyAssignContainer.showPTTOptions {
-	padding-top: 6px;
-	padding-bottom: 6px;
-	height: 68px;
-	opacity: 1;
-	pointer-events: initial;
-	margin-top: 10px !important;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    height: 68px;
+    opacity: 1;
+    pointer-events: initial;
+    margin-top: 10px !important;
 }
 
 /* Changes position checkbox microphone toggle */
 .DialogCheckbox_Container {
-	cursor: pointer;
-	padding: 4px;
-	margin-bottom: 0px !important;
-	margin-top: 0px !important;
+    cursor: pointer;
+    padding: 4px;
+    margin-bottom: 0px !important;
+    margin-top: 0px !important;
 }
 
 /* none button for voice */
-._DialogSection.pushToTalkSection .pushToKeyAssignContainer .DialogButton, ._DialogSection.pushToTalkSection .pushtoTalkKeyAssignContainer .DialogButton {
-	outline: 2px solid rgba(20, 162, 255, 0);
-	outline-offset: 2px;
-	width: fit-content;
-	min-width: 100px;
-	border-radius: 4px !important;
-	height: 32px;
-	padding: 0 16px;
-	align-self: flex-end;
+._DialogSection.pushToTalkSection .pushToKeyAssignContainer .DialogButton,
+._DialogSection.pushToTalkSection .pushtoTalkKeyAssignContainer .DialogButton {
+    outline: 2px solid rgba(20, 162, 255, 0);
+    outline-offset: 2px;
+    width: fit-content;
+    min-width: 100px;
+    border-radius: 4px !important;
+    height: 32px;
+    padding: 0 16px;
+    align-self: flex-end;
 }
 
 /* removes shadows from all buttons */
 button.DialogButton::before {
-	pointer-events: none;
-	user-select: none;
-	content: ' ';
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	border-radius: 4px !important;
-	box-shadow: none !important;
-	opacity: 0;
-	transition: opacity 200ms ease-in-out;
+    pointer-events: none;
+    user-select: none;
+    content: ' ';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    border-radius: 4px !important;
+    box-shadow: none !important;
+    opacity: 0;
+    transition: opacity 200ms ease-in-out;
 }
 
 /* Advanced Button */
 .VoiceSettings .advancedSettingsButton {
-	margin-bottom: 0px;
-	margin-top: 16px;
-	border-radius: 4px !important;
+    margin-bottom: 0px;
+    margin-top: 16px;
+    border-radius: 4px !important;
 }
 
 /* Advanced Expanded background */
 .VoiceSettings .advancedSettings.showAdvanced {
-	opacity: 1;
-	padding-top: 16px;
-	padding-bottom: 16px;
-	height: 274px;
-	border-radius: 4px !important;
-	background: #151515 !important;
+    opacity: 1;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    height: 274px;
+    border-radius: 4px !important;
+    background: #151515 !important;
 }
 
 /* copy voice clipboard button */
 button.DialogButton.copyVoiceLogsButton {
-	margin-top: 12px;
-	margin-bottom: 12px;
-	width: fit-content;
-	padding: 0 24px;
-	margin-left: auto;
-	margin-right: auto;
-	border-radius: 4px !important;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    width: fit-content;
+    padding: 0 24px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 4px !important;
 }
 
 /* EDIT NICKNAME */
 /* Buttons Shape */
 .DialogTwoColLayout>._DialogLayout {
-	max-width: calc(50% - 14px);
-	min-width: 200px;
-	border-radius: 4px !important;
+    max-width: calc(50% - 14px);
+    min-width: 200px;
+    border-radius: 4px !important;
 }
 
 /* Search */
 ._DialogTextInputBase:focus {
-	background: #151515 !important;
-	box-shadow: none !important;
-	padding-left: 11px;
-	border-radius: 4px !important;
+    background: #151515 !important;
+    box-shadow: none !important;
+    padding-left: 11px;
+    border-radius: 4px !important;
 }
 
 ._DialogTextInputBase:not(disabled):hover {
-	background: #151515;
-	border-radius: 4px !important;
+    background: #151515;
+    border-radius: 4px !important;
 }
 
-._DialogTextInputBase, ._DialogInputContainer {
-	background: #151515 !important;
-	border-radius: 4px !important;
-	box-shadow: none !important;
+._DialogTextInputBase,
+._DialogInputContainer {
+    background: #151515 !important;
+    border-radius: 4px !important;
+    box-shadow: none !important;
 }
 
 /* CATEGORIZE */
 .DialogCheckbox_Container:hover .DialogCheckbox,
 .DialogCheckbox:hover:not(.Disabled) {
-	background-color: #151515 !important;
+    background-color: #151515 !important;
 }
 
 /* Avatar Background */
 .AssignCategoriesDialog_Friend {
-	margin-bottom: 16px;
-	padding: 6px;
-	background: #2e2e2f !important;
-	border-radius: 4px !important;
+    margin-bottom: 16px;
+    padding: 6px;
+    background: #2e2e2f !important;
+    border-radius: 4px !important;
 }
 
 .ModalPosition_TopBar {
@@ -361,5 +369,5 @@ button.DialogButton.copyVoiceLogsButton {
 }
 
 .miniprofile_miniProfileBackground_3gfFJ {
-        background: radial-gradient(ellipse farthest-corner at 20% 30%, #34373f 50%, #282c32 100%)!important;
+    background: radial-gradient(ellipse farthest-corner at 20% 30%, #34373f 50%, #282c32 100%) !important;
 }
